--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ hours.csv
 hours.csv
 *.csv
 *.csv
+CommonFunctions/__pycache__/csvTools.cpython-312.pyc
+CommonFunctions/__pycache__/formatTools.cpython-312.pyc
