--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ hours.csv
 *.csv
 CommonFunctions/__pycache__/csvTools.cpython-312.pyc
 CommonFunctions/__pycache__/formatTools.cpython-312.pyc
+StoredData/version.txt
