--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ hours.csv
 CommonFunctions/__pycache__/formatTools.cpython-312.pyc
 CommonFunctions/__pycache__/csvTools.cpython-312.pyc
 *.pyc
+/CommonFunctions/__pycache__
